2015-01-10  Andreas K. Foerster  <info@akfoerster.de>

	* configure:
	new option: --with-sdl1.2, default to sdl2

	* lua/lua.avt (lavt_launch):
	try to close or flush all files, never return

2014-05-23  Andreas K. Foerster  <info@akfoerster.de>

	* audio-common.c, audio-sdl.c:
	improved support for 24 and 32 bit audio

2014-05-22  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h (AVT_KEY_F): new macro

2014-05-15  Andreas K. Foerster  <info@akfoerster.de>

	* audio-sdl.c: optimized further

2014-05-12  Andreas K. Foerster  <info@akfoerster.de>

	* lua/four_in_a_row.lua: clack sound

2014-05-11  Andreas K. Foerster  <info@akfoerster.de>

	* audio-sdl.c:
	reopen audio-device only when the audio format changes

2014-01-01  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c: new update strategy
	don't update each character when not in slowprint mode
	(avt_update_line): new function

	* avatar.c (dirty_line): new variable

2013-12-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (update_area_sdl): optimization

------------------------------------------------------------------------

2013-12-26  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.24.3 released

2013-10-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_char):
	SO/SI switch underlined on/off; DC1/DC2: bold on/off

	* avatar.c (avt_utf16_surrogate): new function

	* avatar.c (avt_put_char):
	for testing purposes make plane 16 mirror plane 0

	* lua/akfavatar-term.c (APC_command): fixed

2013-10-04  Andreas K. Foerster  <info@akfoerster.de>

	* avtdata.h, avtdata.c: remove read24 again

2013-10-03  Andreas K. Foerster  <info@akfoerster.de>

	* audio-common.c (avt_audio_loader): new function
	(avt_load_au, avt_load_wave): adapted

	* lua/akfavatar/avtdemo.lua: fix: read audio into memory

	* avtdata.h, avtdata.c (filenumber):
	renamed from fileno (had problems with macro in some libc)

2013-10-02  Andreas K. Foerster  <info@akfoerster.de>
